--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 		"start": "sirv public"
 	},
 	"dependencies": {
+		"@tauri-apps/api": "^1.0.0-beta-rc.3",
+		"@tauri-apps/cli": "^1.0.0-beta-rc.4",
 		"sirv-cli": "^1.0.0",
 		"svelte": "^3.32.3",
-		"tauri": "^0.14.1"
+		"tauri": "^0.14.1",
+		"yarn": "^1.22.10"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^14.0.0",
@@ -23,8 +26,8 @@
 		"postcss-load-config": "^3.0.1",
 		"rollup": "^2.3.4",
 		"rollup-plugin-livereload": "^2.0.0",
-		"rollup-plugin-svelte": "^6.0.0",
-		"rollup-plugin-terser": "^7.0.0",
+		"rollup-plugin-svelte": "^6.1.0",
+		"rollup-plugin-terser": "7.0.0",
 		"svelte": "^3.32.3",
 		"svelte-preprocess": "^4.6.8",
 		"tailwindcss": "^2.0.3"
